src/objects/CventEvents__RespondentTemp__c.object
<CustomObject>
    <description>Auxiliary object used for storing a fusion of contact and survey participation information retrieved from Cvent.</description>
    <fields>
        <fullName>CventEvents__pkg_Biography__c</fullName>
        <label>Biography</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CCEmailAddress__c</fullName>
        <label>CC Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CCPARequestDate__c</fullName>
        <label>(CCPA) &quot;Do Not Sell&quot; Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CCPARequester__c</fullName>
        <label>(CCPA) &quot;Do Not Sell&quot; Requester</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CCPAStatus__c</fullName>
        <label>(CCPA) &quot;Do Not Sell&quot; Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ContactStub__c</fullName>
        <externalId>true</externalId>
        <label>Contact Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ContactTypeName__c</fullName>
        <label>Contact Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_CventSurveyStub__c</fullName>
        <description>Unlike &quot;Survey Stub&quot; field, stores survey stub regardless the survey type.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unlike &quot;Survey Stub&quot; field, stores survey stub regardless the survey type.</inlineHelpText>
        <label>Cvent Survey Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_DataTransferBindings__c</fullName>
        <description>Stores the serialized map of SF object type to the record Id created on data transfer.</description>
        <label>Data Transfer Bindings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_DataTransferMessage__c</fullName>
        <description>Stores a list of errors that occurred during the data transfer flow.</description>
        <label>Data Transfer Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_DataTransferStatus__c</fullName>
        <description>Stores the status of the data transfer flow.</description>
        <label>Data Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Partial Error</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a Cvent contact has been removed from address book.</description>
        <inlineHelpText>Indicates if a Cvent contact has been removed from address book.</inlineHelpText>
        <label>Cvent Contact Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Designation__c</fullName>
        <label>Designation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ExternalObjectId__c</fullName>
        <description>Stores SF record Id Cvent contact has been originated from.</description>
        <externalId>true</externalId>
        <label>Salesforce Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ExternalSystemId__c</fullName>
        <description>Stores SF organization Id Cvent contact has been originated from.</description>
        <label>Salesforce System Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_FacebookUrl__c</fullName>
        <label>Facebook URL</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_FieldMatchingResult__c</fullName>
        <description>Stores the results of the most recent field matching configuration usage.</description>
        <inlineHelpText>Stores the results of the most recent field matching configuration usage.</inlineHelpText>
        <label>Field Matching Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_FirstName__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Gender__c</fullName>
        <label>Gender</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HasRecordMatchingError__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the error is occurred during the record matching flow.</description>
        <label>Has Record Matching Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Headline__c</fullName>
        <label>Headline</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeAddress1__c</fullName>
        <label>Home Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeAddress2__c</fullName>
        <label>Home Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeAddress3__c</fullName>
        <label>Home Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeCity__c</fullName>
        <label>Home City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeCountryCode__c</fullName>
        <label>Home Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeCountryName__c</fullName>
        <label>Home Country Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeFax__c</fullName>
        <label>Home Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomePhone__c</fullName>
        <label>Home Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomePostalCode__c</fullName>
        <label>Home Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeStateCode__c</fullName>
        <label>Home State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_HomeStateName__c</fullName>
        <label>Home State Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IntegrationId__c</fullName>
        <description>Stores SF record Id survey invitation has been triggered for.</description>
        <label>Integration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsExcludedFromEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opted-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsObfuscation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Obfuscated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_IsOriginatedFromThisOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the target Cvent contact has been originated from this SF instance via invitation or registration workflow.</description>
        <label>Originated From This Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_LinkedinUrl__c</fullName>
        <label>Linkedin URL</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MatchScenario__c</fullName>
        <description>Stores the record matching scenario which rule was applied during the most recent data sync.</description>
        <inlineHelpText>Stores the record matching scenario which rule was applied during the most recent data sync.</inlineHelpText>
        <label>Match Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Single Match</fullName>
                </value>
                <value>
                    <fullName>Multiple Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipAmountDue__c</fullName>
        <label>Membership Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipExpirationDate__c</fullName>
        <label>Membership Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipItem__c</fullName>
        <label>Membership Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipJoinDate__c</fullName>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipLastRenewalDate__c</fullName>
        <label>Membership Last Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MembershipType__c</fullName>
        <label>Membership Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Message__c</fullName>
        <description>Stores the information/error message of the record matching flow.</description>
        <label>Sync Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_MobilePhone__c</fullName>
        <label>Mobile Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Nickname__c</fullName>
        <label>Nickname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Pager__c</fullName>
        <label>Pager</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PassportCountryCode__c</fullName>
        <label>Passport Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Prefix__c</fullName>
        <label>Prefix</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryAddress1__c</fullName>
        <label>Primary Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryAddress2__c</fullName>
        <label>Primary Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryAddress3__c</fullName>
        <label>Primary Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryCity__c</fullName>
        <label>Primary City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryCountryCode__c</fullName>
        <label>Primary Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryCountryName__c</fullName>
        <label>Primary Country Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryPostalCode__c</fullName>
        <label>Primary Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryStateCode__c</fullName>
        <label>Primary State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_PrimaryStateName__c</fullName>
        <label>Primary State Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ProcessStatus__c</fullName>
        <description>Represents the status of the record matching flow.</description>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_ProfilePictureUrl__c</fullName>
        <label>Profile Picture URL</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Pronouns__c</fullName>
        <label>Pronouns</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RespondedDate__c</fullName>
        <label>Responded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RespondentCode__c</fullName>
        <externalId>true</externalId>
        <label>Respondent Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RespondentLastModifiedDate__c</fullName>
        <label>Respondent Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RespondentStatus__c</fullName>
        <label>Respondent Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_RespondentStub__c</fullName>
        <externalId>true</externalId>
        <label>Respondent Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_SourceId__c</fullName>
        <label>Source Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_SurveyStub__c</fullName>
        <description>Stores either standalone survey stub or the blank stub for event surveys.</description>
        <externalId>true</externalId>
        <inlineHelpText>Stores either standalone survey stub or the blank stub for event surveys.</inlineHelpText>
        <label>Survey Stub</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_TransactionId__c</fullName>
        <externalId>true</externalId>
        <label>Transaction Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_TwitterUrl__c</fullName>
        <label>Twitter URL</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Unsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_Website__c</fullName>
        <label>Website</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkAddress1__c</fullName>
        <label>Work Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkAddress2__c</fullName>
        <label>Work Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkAddress3__c</fullName>
        <label>Work Address 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkCity__c</fullName>
        <label>Work City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkCountryCode__c</fullName>
        <label>Work Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkCountryName__c</fullName>
        <label>Work Country Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkFax__c</fullName>
        <label>Work Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkPhone__c</fullName>
        <label>Work Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkPostalCode__c</fullName>
        <label>Work Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkStateCode__c</fullName>
        <label>Work State Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__pkg_WorkStateName__c</fullName>
        <label>Work State Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Respondent Temp Record</label>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_ProcessStatus__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CventEvents__pkg_DataTransferStatus__c</columns>
        <columns>CventEvents__pkg_DataTransferMessage__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__StatusFailed</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Status Failed</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__StatusPending</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Status Pending</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__StatusProcessed</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__pkg_FirstName__c</columns>
        <columns>CventEvents__pkg_LastName__c</columns>
        <columns>CventEvents__pkg_Email__c</columns>
        <columns>CventEvents__pkg_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CventEvents__pkg_ProcessStatus__c</field>
            <operation>equals</operation>
            <value>Processed</value>
        </filters>
        <label>Status Processed</label>
    </listViews>
    <nameField>
        <displayFormat>RT-{00000000}</displayFormat>
        <label>Respondent Temp Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respondent Temp Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>